# advent-of-code-2023

./: .gitignore  README.md  aoc2023.opam  dune-project
lib/: dune  utils.ml
src/day1/: dune  part1.ml
src/day10/: dune  part1.ml  part2.ml
src/day2/: dune  part1.ml  part2.ml
src/day3/: dune  part1.ml  part2.ml  purely_functional.ml
src/day4/: dune  part1.ml  part2.ml
src/day5/: dune  part1.ml  part2.ml
src/day6/: dune  part1.ml  part2.ml
src/day7/: dune  part1.ml  part2.ml
src/day8/: dune  part1.ml  part2.ml
src/day9/: dune  part1.ml  part2.ml
