(lang dune 3.11)

(name aoc2023)

(generate_opam_files false)

(source
 (github ComanderP/advent-of-code-2023))

(authors "Me")

(maintainers "Me")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc2023)
 (synopsis "My advent of code 2023 solutions")
 (description "Cool!")
 (depends ocaml dune)
 (tags
  (aoc "advent of code" 2023 aoc2023)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
